--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "docker.io"
   ],
   "dependencies": {
-    "docker-modem": "0.1.x"
+    "docker-modem": "0.1.x",
+    "bluebird": "~1.1.0"
   },
   "devDependencies": {
     "chai": "~1.7.0",
